common-applications/test-environment/openeuler-usercenter/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: openeuler-usercenter
  name: openeuler-usercenter
