common-applications/test-environment/openeuler-usercenter/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openeuler-usercenter
  namespace: openeuler-usercenter
spec:
  selector:
    matchLabels:
      app: openeuler-usercenter
  template:
    metadata:
      labels:
        app: openeuler-usercenter
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      nodeSelector:
        autoscaler: "true"
      containers:
      - name: openeuler-usercenter
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/openeuler-usercenter-test:e712c3c7c79c610f6b615a4c018929d73e3d277c
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 500m
            memory: 500Mi
