common-applications/test-environment/openeuler-usercenter/opengauss-usercenter.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opengauss-usercenter
  namespace: openeuler-usercenter
spec:
  selector:
    matchLabels:
      app: opengauss-usercenter
  template:
    metadata:
      labels:
        app: opengauss-usercenter
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      nodeSelector:
        autoscaler: "true"
      containers:
      - name: opengauss-usercenter
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/opengauss/opengauss-usercenter-test:659d9b3eb9db1aa70032e8fcfbb3fac9c3adf154
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 500m
            memory: 500Mi
